--- a/pages/index.css
+++ b/pages/index.css
@@ -23,5 +23,6 @@
 @import url(../blocks/form/__checkbox-custom/form__checkbox-custom.css);
 @import url(../blocks/form/__checkbox-label/form__checkbox-label.css);
 @import url(../blocks/form/__submit/form__submit.css);
+@import url(../blocks/form/__link/form__link.css);
 
 
