--- a/blocks/background/__circle/_position/background__circle_position_bottom-left.css
+++ b/blocks/background/__circle/_position/background__circle_position_bottom-left.css
@@ -3,3 +3,9 @@
   right: 0;
   transform: translate(10%, 60%);
 }
+
+@media screen and (max-height: 500px) {
+  .background__circle_position_bottom-left {
+    display: none;
+  }
+}
