--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -14,6 +14,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   /* opacity: .3; */
-  max-width: 100vw;
-  max-height: 500px;
+  width: 100vw;
+  height: 100vh;
 }
