--- a/blocks/promo/promo.css
+++ b/blocks/promo/promo.css
@@ -1,6 +1,8 @@
 .promo {
-  margin: 0;
-  padding: 65px 50px 50px;
+  margin: 0 auto;
+  /* padding: 65px 50px 50px; */
+  padding: 65px 0 0;
+  width: 250px;
   display: flex;
   flex-direction: column;
   align-items: center;
