--- a/blocks/form/__checkbox-label/form__checkbox-label.css
+++ b/blocks/form/__checkbox-label/form__checkbox-label.css
@@ -1,8 +1,8 @@
 .form__checkbox-label {
   margin: 0;
   padding: 0;
-  width: 230px;
+  width: 280px;
   font-size: 8px;
   line-height: 1;
-  color: #959595;
+  color: #aeaeae;
 }
